force-app/main/default/objects/Contact/fields/Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Interest__c</fullName>
    <label>Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Research_Areas</valueSetName>
    </valueSet>
</CustomField>