force-app/main/default/objects/Contact/fields/Artifacts_Programs_and_Research__c.field-meta.xml
<CustomField>
    <fullName>Artifacts_Programs_and_Research__c</fullName>
    <label>Artifacts, Programs, and Research</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>