force-app/main/default/objects/Contact/fields/Assistant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Assistant_First_Name__c</fullName>
    <label>Assistant First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>