force-app/main/default/objects/Contact/fields/Assistant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Last_Name__c</fullName>
    <label>Assistant Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>