force-app/main/default/objects/Contact/fields/Discipline_Specialization_3__c.field-meta.xml
<CustomField>
    <fullName>Discipline_Specialization_3__c</fullName>
    <label>Discipline Specialization 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Research_Specialization</valueSetName>
    </valueSet>
</CustomField>