force-app/main/default/objects/Contact/fields/Discipline_Sub_Specialization_1__c.field-meta.xml
<CustomField>
    <fullName>Discipline_Sub_Specialization_1__c</fullName>
    <label>Discipline Sub-Specialization 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Discipline_Specialization_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Research_Sub_Specialization</valueSetName>
    </valueSet>
</CustomField>