force-app/main/default/objects/Contact/fields/Education_Resources__c.field-meta.xml
<CustomField>
    <fullName>Education_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education Resources</label>
    <type>Checkbox</type>
</CustomField>