force-app/main/default/objects/Contact/fields/How_to_Connect_with_Others__c.field-meta.xml
<CustomField>
    <fullName>How_to_Connect_with_Others__c</fullName>
    <label>How to Connect with Others</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conferences (In Person) and Consider Presenting</fullName>
            </value>
            <value>
                <fullName>Conferences (In Person) and Consider Attending</fullName>
            </value>
            <value>
                <fullName>Conferences (Virtual) and Consider Presenting</fullName>
            </value>
            <value>
                <fullName>Conferences (Virtual) and Consider Attending</fullName>
            </value>
            <value>
                <fullName>Workshops (In Person) and Consider Participating</fullName>
            </value>
            <value>
                <fullName>Workshops (Virtual) and Consider Participating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>