force-app/main/default/objects/Contact/fields/Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type__c</fullName>
    <label>Institution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Institution_Type</valueSetName>
    </valueSet>
</CustomField>