force-app/main/default/objects/Contact/fields/Interested_in_Expert_Panel__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Expert_Panel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Expert Panel</label>
    <type>Checkbox</type>
</CustomField>