force-app/main/default/objects/Contact/fields/Other_Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Other_Area_of_Interest__c</fullName>
    <label>Other Area of Interest</label>
    <length>50</length>
    <type>Text</type>
</CustomField>