force-app/main/default/objects/Contact/fields/Other_Discipline_Specialization__c.field-meta.xml
<CustomField>
    <fullName>Other_Discipline_Specialization__c</fullName>
    <label>Other Discipline Specialization</label>
    <length>50</length>
    <type>Text</type>
</CustomField>