force-app/main/default/objects/Contact/fields/Photograph__c.field-meta.xml
<CustomField>
    <fullName>Photograph__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photograph</label>
    <type>Checkbox</type>
</CustomField>