force-app/main/default/objects/Contact/fields/Resume_CV_Bio__c.field-meta.xml
<CustomField>
    <fullName>Resume_CV_Bio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resume/CV/Bio</label>
    <type>Checkbox</type>
</CustomField>