force-app/main/default/objects/Contact/fields/Share_Information__c.field-meta.xml
<CustomField>
    <fullName>Share_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share Information</label>
    <type>Checkbox</type>
</CustomField>