force-app/main/default/objects/Contact/validationRules/Other_Area_of_Interest_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Area_of_Interest_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    INCLUDES(Area_of_Interest__c, &apos;Other&apos;),
    ISBLANK(Other_Area_of_Interest__c)
)</errorConditionFormula>
    <errorMessage>Other Area of Interested must be provided if Other is selected</errorMessage>
</ValidationRule>