force-app/main/default/objects/Contact/validationRules/Other_Discipline_Sub_Specialization_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Discipline_Sub_Specialization_Req</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   AND(
       ISPICKVAL(Discipline_Sub_Specialization_1__c, &apos;Other&apos;),
       ISBLANK(Other_Discipline_Specialization__c)
   ),
   AND(
       ISPICKVAL(Discipline_Sub_Specialization_2__c, &apos;Other&apos;),
       ISBLANK(Other_Discipline_Specialization__c)
   ),
   AND(
       ISPICKVAL(Discipline_Sub_Specialization_3__c, &apos;Other&apos;),
       ISBLANK(Other_Discipline_Specialization__c)
   )
)</errorConditionFormula>
    <errorMessage>Other Discipline Sub-Specialization must be provided if Other is selected</errorMessage>
</ValidationRule>